--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:27.1.0'
     compile 'me.relex:circleindicator:1.2.2@aar'
+    compile 'com.android.support:design:27.1.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:27.1.0'
     compile 'com.android.support:cardview-v7:27.1.0'
